{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 298,
  "lineage": "c09e2344-9adc-d626-2775-f53ebc938284",
  "resources": [
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a3d25877ea1a5e1",
            "arn": "arn:aws:ec2:ap-south-1:992382670521:elastic-ip/eipalloc-05a3d25877ea1a5e1",
            "domain": "vpc",
            "id": "eipalloc-05a3d25877ea1a5e1",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-52-66-17-229.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.17.229",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:internet-gateway/igw-009c5d14a1b0ac355",
            "id": "igw-009c5d14a1b0ac355",
            "owner_id": "992382670521",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-igw",
              "Owner": "chaithu",
              "Project": "tacbot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-igw",
              "Owner": "chaithu",
              "Project": "tacbot"
            },
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05a3d25877ea1a5e1",
            "association_id": "eipassoc-034d1d59853c906bb",
            "connectivity_type": "public",
            "id": "nat-0f861a42ae7b2cebf",
            "network_interface_id": "eni-0e18c521186ee09f2",
            "private_ip": "10.7.1.197",
            "public_ip": "52.66.17.229",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-089962e4c70aedab9",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-nat",
              "Owner": "chaithu",
              "Project": "tacbot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-nat",
              "Owner": "chaithu",
              "Project": "tacbot"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_eip.eip",
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_subnet.public",
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:route-table/rtb-09f84d072c78cb0a7",
            "id": "rtb-09f84d072c78cb0a7",
            "owner_id": "992382670521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f861a42ae7b2cebf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-private-rt",
              "Owner": "chaithu",
              "Project": "tacbot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-private-rt",
              "Owner": "chaithu",
              "Project": "tacbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_eip.eip",
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_nat_gateway.nat",
            "module.mvpc.aws_subnet.public",
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:route-table/rtb-00406a4a6c966529e",
            "id": "rtb-00406a4a6c966529e",
            "owner_id": "992382670521",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-009c5d14a1b0ac355",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-public-rt",
              "Owner": "chaithu",
              "Project": "tacbot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-public-rt",
              "Owner": "chaithu",
              "Project": "tacbot"
            },
            "timeouts": null,
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076671c29fdbc311b",
            "route_table_id": "rtb-09f84d072c78cb0a7",
            "subnet_id": "subnet-0eacd107a4cebbbd5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_eip.eip",
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_nat_gateway.nat",
            "module.mvpc.aws_route_table.privatert",
            "module.mvpc.aws_subnet.private",
            "module.mvpc.aws_subnet.public",
            "module.mvpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08909ecc79c6e3c18",
            "route_table_id": "rtb-09f84d072c78cb0a7",
            "subnet_id": "subnet-0ecec964a1fa7f51a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_eip.eip",
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_nat_gateway.nat",
            "module.mvpc.aws_route_table.privatert",
            "module.mvpc.aws_subnet.private",
            "module.mvpc.aws_subnet.public",
            "module.mvpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0381d007cc154114b",
            "route_table_id": "rtb-09f84d072c78cb0a7",
            "subnet_id": "subnet-053296126b4565417"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_eip.eip",
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_nat_gateway.nat",
            "module.mvpc.aws_route_table.privatert",
            "module.mvpc.aws_subnet.private",
            "module.mvpc.aws_subnet.public",
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dc2c493c48ef812",
            "route_table_id": "rtb-00406a4a6c966529e",
            "subnet_id": "subnet-089962e4c70aedab9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_route_table.publicrt",
            "module.mvpc.aws_subnet.public",
            "module.mvpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aa459e7f8916b6bb",
            "route_table_id": "rtb-00406a4a6c966529e",
            "subnet_id": "subnet-0b30d73cd221698ca"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_route_table.publicrt",
            "module.mvpc.aws_subnet.public",
            "module.mvpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082e418f616692569",
            "route_table_id": "rtb-00406a4a6c966529e",
            "subnet_id": "subnet-002658b8f34c79eed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_internet_gateway.igw",
            "module.mvpc.aws_route_table.publicrt",
            "module.mvpc.aws_subnet.public",
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:subnet/subnet-0eacd107a4cebbbd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.7.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eacd107a4cebbbd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382670521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-private-subnet-0",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-private-subnet-0",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:subnet/subnet-0ecec964a1fa7f51a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.7.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecec964a1fa7f51a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382670521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-private-subnet-1",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-private-subnet-1",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:subnet/subnet-053296126b4565417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.7.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053296126b4565417",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382670521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-private-subnet-2",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-private-subnet-2",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:subnet/subnet-089962e4c70aedab9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.7.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089962e4c70aedab9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382670521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-public-subnet-0",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-public-subnet-0",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:subnet/subnet-0b30d73cd221698ca",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.7.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b30d73cd221698ca",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382670521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-public-subnet-1",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-public-subnet-1",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:subnet/subnet-002658b8f34c79eed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.7.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002658b8f34c79eed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382670521",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-public-subnet-2",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-public-subnet-2",
              "Owner": "chaithu",
              "Project": "tacbot",
              "kubernetes.io/cluster/tacbotinc-eks": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0417630a90df3529e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.mvpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.mvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:992382670521:vpc/vpc-0417630a90df3529e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-0c0e45aed1eff7edf",
            "default_route_table_id": "rtb-057fb5feed5c41448",
            "default_security_group_id": "sg-03b66a5fbe43fa2ac",
            "dhcp_options_id": "dopt-05b26aa5944a53d3e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0417630a90df3529e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057fb5feed5c41448",
            "owner_id": "992382670521",
            "tags": {
              "Environment": "dev",
              "Name": "tacbot-vpc",
              "Owner": "chaithu",
              "Project": "tacbot"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "tacbot-vpc",
              "Owner": "chaithu",
              "Project": "tacbot"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}